--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* style.css - v2.70 - Smooth Animations */
+/* style.css - v2.80 - Smooth Animations & timeline preview */
 @charset "UTF-8";
 
 /* --- Base y Fondo --- */
